--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h2>Image </h2>
-    <img src="wall.jpeg">
+    <img src="wall.jpeg" height="50px" width="50px">
 	<h2> This is one of my favourite song</h2>
     <audio controls autoplay>
 		<source src="name.mp3" type="audio/mpeg">
